--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,40 +1,83 @@
+html,body 
+{
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
 /* 
-yellow #EFC81A
+yellow main #EFC81A
+auth-bg #f5f5f5
 bg #E5E5E5
+gray-strong 999999
+gray-soft #C4C4C4
 user default bg #C4C4C4
 button edit profile #E7E7E7
 pinky bg #FAF7ED
 navbar active bg #6D61F2;
 search efefef
-.text-dark
-.text-body
-.text-secondary
-.text-muted
-.text-light
-.text-white
-.text-black-50
-.text-white-50
+.text-dark  .text-body  .text-secondary
+.text-muted  .text-light  .text-white
+.text-black-50  .text-white-50
 */
 
-.tes{
-  background-color: red;
-  color: green;
+.tes{background-color: red; color: green;}
+
+.mobile {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 480px;
+}
+.main {
+  padding: 0 0 0 1rem;
+  flex: 1;
+  display: flex;
+  width: 100%;
+  min-height: 100vh; /* temporary height */
+}
+
+.nav {
+  z-index: 1;
+  background-color: blue;
+  position: fixed;
+  bottom: 0;
+  right: 50;
+  display: flex;
+  align-items: center;
+  height: 10vh;
+  width: 480px;
+  border-radius: 1rem 1rem 0 0;
+}
+
+.nav-link:hover{
+  background-color: purple;
+  color: aqua;
+}
+.nav-link:active{
+  background-color: purple;
+  color: aqua;
+}
+
+
+.main-bg-cl{background-color: #EFC81A;}
+.auth{
+  background-color: #f5f5f5;
+  /* border: 1px dashed black; */
   align-items: center;
 }
-
-
-
-
-.main-text-cl{
-  color: #EFC81A;
-}
-.main-bg-cl{
-  background-color: #EFC81A;
-}
-.auth-bg{
-  /* background-color: #EFEFEF; */
-  border: 1px dashed black;
-}
+.main-text-cl{color: #EFC81A;}
+.text-1-cl{color: #C4C4C4;}
+.p1{font-size: 28px;}
+.p2{font-size: 28px;}
+.p3{font-size: 20px;}
+.p4{font-size: 14px; }
+.bold{font-weight: bold;}
 
 .defAva{
   font-size: 10rem;
@@ -45,53 +88,31 @@ search efefef
   /* height: 20rem;
   width: 20rem; */
   /* line-height: 90px; */
-
 }
 
-.navbar {
-  z-index: 1;
-  background-color: white;
-  position: relative;
-}
-
-.mobile {
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* max-width: 480px; */
-}
-
-.container {
+/* .container {
   padding: 0 40rem;
   margin: 0 40rem;
-}
+} */
 
-.main {
-  padding: 0;
-  flex: 1;
-  display: flex;
-  /* flex-direction: column; */
-  /* justify-content: center; */
-  align-items: center;
-  
-  min-height: 90vh;
-  width: 480px;
-}
-
-.formtype{
+/* .formtype{
   background-color: #EFC81A;
   color: #ffffff;
   padding: 14px 20px;
   border-radius: 12px;
   border-style: none;
-}
+} */
 .button{
-  background-color: #EFC81A;
-  color: #ffffff;
   padding: 14px 20px;
   border-radius: 12px;
-  border-style: none;
+  border: 2px solid #EFC81A;
+  background-color: #EFC81A;
+  color: #ffffff;
+}
+.button:hover{
+  background-color: #fff;
+  color: #EFC81A;
+  transition: 1s;
 }
 .aStyle{
   text-decoration: none;
@@ -102,6 +123,10 @@ search efefef
 
 }
 
+.popular{
+  height: 5rem;
+
+}
 
 /* Input type=number no arrow */
 input[type=number]::-webkit-inner-spin-button, 
@@ -113,29 +138,3 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
-/* html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-} */
