--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap'); /* font-family: 'inter'; */
-html,body 
-{
+html,body {
   padding: 0;
   margin: 0;
   display: flex;
@@ -10,6 +9,7 @@ html,body
 
 /* 
 yellow main #EFC81A
+active navbar icon color = #EEC302;
 auth-bg #f5f5f5
 bg #E5E5E5
 gray-strong 999999
@@ -45,39 +45,51 @@ main {
 section {
   margin-bottom: 2rem;
 }
+.container {
+  margin-left: 1rem !important;
+  margin-right: 1rem !important;
+}
 nav {
   z-index: 1;
-  background-color: white;
   position: fixed;
   bottom: 0;
   right: 50;
   display: flex;
   align-items: center;
+  background-color: white;
   height: 10vh;
   width: 480px;
   border-radius: 1rem 1rem 0 0;
+  font-size: 1.8rem;
+  justify-content: center;
+  text-align: center;
 }
-.container {
-  margin-left: 1rem !important;
-  margin-right: 1rem !important;
-}
-
 .nav-link{
   border-radius: 2rem;
+  /* border: 1px solid white; */
   color: gray !important;
-  font-weight: bold !important;
-  font-size: 20px !important;
-  border: 1px solid white;
+  /* padding-top: 30px; */
+  width: 80%;
+  padding: 12px 5px !important;
+  margin-left: auto;
+  margin-right: auto;
+  transition:  3s;
 }
 .nav-link:hover{
   /* background-color: #EFC81A; */
   color: #EFC81A !important;
-  border: 1px solid #EFC81A;
+  border: 1px solid #EFC81A !important;
+  transition: ease-in-out 1s;
 }
-.nav-link:active{
+.active{
   background-color: #EFC81A;
   color: white !important;
 }
+.active:hover{
+  background-color: #EFC81A;
+  color: black !important;
+}
+
 /* .nav-link .active{
   background-color: #EFC81A;
   color: white !important;
