--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,6 +34,7 @@ search efefef
   align-items: center;
   width: 480px;
 }
+
 main {
   flex: 1;
   display: flex;
@@ -42,13 +43,16 @@ main {
   min-height: 100vh; /* temporary height */
   background-color:palevioletred;  /* important to edit bg color */
 }
+
 section {
   margin-bottom: 2rem;
 }
+
 .container {
   margin-left: 1rem !important;
   margin-right: 1rem !important;
 }
+
 nav {
   z-index: 1;
   position: fixed;
@@ -65,18 +69,14 @@ nav {
   text-align: center;
 }
 .nav-link{
-  border-radius: 2rem;
-  /* border: 1px solid white; */
   color: gray !important;
-  /* padding-top: 30px; */
-  width: 80%;
-  padding: 12px 5px !important;
+  border-radius: 2rem;
   margin-left: auto;
   margin-right: auto;
-  transition:  3s;
+  width: 80%;
+  padding: 0.5rem 0 !important;
 }
 .nav-link:hover{
-  /* background-color: #EFC81A; */
   color: #EFC81A !important;
   border: 1px solid #EFC81A !important;
   transition: ease-in-out 1s;
@@ -89,11 +89,6 @@ nav {
   background-color: #EFC81A;
   color: black !important;
 }
-
-/* .nav-link .active{
-  background-color: #EFC81A;
-  color: white !important;
-} */
 
 .main-bg-cl{background-color: #EFC81A;}
 .auth{
