--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,8 +49,8 @@ section {
 }
 
 .container {
-  margin-left: 1rem !important;
-  margin-right: 1rem !important;
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
 }
 
 nav {
@@ -153,6 +153,37 @@ nav {
 
 #poplogo:hover{
   cursor: pointer;
+}
+
+/* SWIPER IN HOME PAGE */
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /* Number Type Input for No Arrow Style */
