--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,6 +101,7 @@ section {
 }
 .main-text-cl{color: #EFC81A;}
 .text-1-cl{color: #C4C4C4;}
+.text-2-cl{color: #999999;}
 .p1{font-size: 28px;}
 .p2{font-size: 28px;}
 .p3{font-size: 20px;}
@@ -108,22 +109,20 @@ section {
 .bold{font-weight: bold;}
 
 /* INPUT STYLE */
-.input-group{
-  height: 50px;
+.input-group-text{
+  border: none !important;
 }
-#logoinput {
-  background-color: #f5f5f5;
-  border-right: none;
+#logoInput {
+  padding: auto 5px;
   border: none;
 }
-#input {
-  background-color: #f5f5f5;
+#idInput {
+  padding: 14px 5px;
   border: none;
-  padding-left: 0;
 }
-#input:focus {
-  border: none ;
+#idInput:focus {
   box-shadow: none ;
+  border: none;
 }
 
 .button{
@@ -202,6 +201,18 @@ section {
   min-height: 60vh;
 }
 
+#backarrow{
+  padding: 0.1rem;
+  background-color: none;
+  border-radius: 5px;
+  font-size: 2rem;
+  text-align: center;
+}
+#backarrow:hover{
+  background-color: #EFC81A;
+  color: white;
+}
+
 /* Number Type Input for No Arrow Style */
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
@@ -211,4 +222,3 @@ input[type=number]::-webkit-outer-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
-
